--- a/sts02/src/main/webapp/WEB-INF/web.xml
+++ b/sts02/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 
-	 <welcome-file-list>
-   		 <welcome-file>index.jsp</welcome-file>
- 	 </welcome-file-list>
- 	 
- 	 <context-param>
- 	  <param-name>contextConfigLocation</param-name>
- 	  <param-value>classpath:/applicationContext.xml</param-value>
- 	 </context-param>
- 	 
- 	 <listener>
- 	 	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
- 	 </listener>
- 	 
- 	 <servlet>
- 	 	<servlet-name>sts02</servlet-name>
- 	 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
- 	 	<init-param>
- 	 		<param-name>contextConfigLocation</param-name>
- 	 		<param-value>/WEB-INF/servlet/sts02-servlet.xml</param-value>
- 	 	</init-param>
- 	 </servlet>
- 	 <servlet-mapping>
- 	 	<servlet-name>sts02</servlet-name>
- 	 	<url-pattern>*.bit</url-pattern>
- 	 </servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:/applicationContext.xml</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<filter>
+		<filter-name>characterEncoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>characterEncoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<servlet>
+		<servlet-name>sts02</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/servlet/sts02-servlet.xml</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>sts02</servlet-name>
+		<url-pattern>*.bit</url-pattern>
+	</servlet-mapping>
 </web-app>
